--- a/src/pages/Favorites.scss
+++ b/src/pages/Favorites.scss
@@ -7,7 +7,7 @@
   margin: 12rem auto;
   padding: 25px;
   max-width: 80%;
-
+  z-index: 1003;
   h2 {
     text-align: left;
     font-weight: 600;
