--- a/src/pages/ImageGenerator.scss
+++ b/src/pages/ImageGenerator.scss
@@ -6,6 +6,7 @@
   color: #eee;
   border-radius: 10px;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  z-index: 1002;
 
   h1 {
     text-align: center;
